--- a/Paint/MainWindow.xaml
+++ b/Paint/MainWindow.xaml
@@ -4,9 +4,52 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Paint"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Title="2024 WPF Painter Ver1" Height="650" Width="1000">
+    <DockPanel LastChildFill="False">
+        <Menu Height="30" DockPanel.Dock="Top">
+            <MenuItem Header="檔案" FontSize="14" Height="28" VerticalAlignment="Center">
+                <MenuItem Header="開新檔案" FontSize="14" Height="28" VerticalAlignment="Center"/>
+                <MenuItem Header="開啟舊檔" FontSize="14" Height="28" VerticalAlignment="Center"/>
+                <MenuItem Header="儲存檔案" FontSize="14" Height="28" VerticalAlignment="Center"/>
+                <MenuItem Header="另存新檔" FontSize="14" Height="28" VerticalAlignment="Center"/>
+                <MenuItem Header="結束" FontSize="14" Height="28" VerticalAlignment="Center"/>
+            </MenuItem>
+        </Menu>
+        <ToolBarTray Height="40" DockPanel.Dock="Top">
+            <ToolBar Height="38" Background="#FFF9D5C0" Margin="0,0,9,0">
+                <Label Content="筆刷色彩" Width="65" VerticalContentAlignment="Center" FontWeight="Bold" FontSize="14"/>
+                <xctk:ColorPicker x:Name="strokeColorPicker" Width="130" DisplayColorAndName="True"/>
+                <Label Content="填滿色彩" Width="65" VerticalContentAlignment="Center" FontWeight="Bold" FontSize="14"/>
+                <xctk:ColorPicker x:Name="fillColorPicker" Width="130" DisplayColorAndName="True"/>
+                <Slider x:Name="strokeThicknessSlider" Width="120" VerticalAlignment="Center" Minimum="1" Maximum="10" Value="1" TickFrequency="1" IsSnapToTickEnabled="True" Margin="20,0,0,0" ValueChanged="strokeThicknessSlider_ValueChanged"/>
+                <Label Width="46" VerticalContentAlignment="Center" FontWeight="Bold" FontSize="14" Margin="10,0,0,0" HorizontalContentAlignment="Center" Content="{Binding Value, ElementName=strokeThicknessSlider}"/>
+            </ToolBar>
+            <ToolBar Width="300" Background="#FFB1D5FD">
+                <RadioButton Width="38" Height="38" Click="ShapeButton_Click" Tag="line" >
+                    <Image Height="32" Width="32" Source="/line.png"/>
+                </RadioButton>
+                <RadioButton Width="38" Height="38" Click="ShapeButton_Click" Tag="rectangle" >
+                    <Image Height="32" Width="32" Source="/rectangle.png"/>
+                </RadioButton>
+                <RadioButton Width="38" Height="38" Click="ShapeButton_Click" Tag="ellipse" >
+                    <Image Height="32" Width="32" Source="/ellipse.png"/>
+                </RadioButton>
+                <RadioButton Width="38" Height="38" Click="ShapeButton_Click" Tag="polyline" >
+                    <Image Height="32" Width="32" Source="/polyline.png"/>
+                </RadioButton>
+                <Separator/>
+            </ToolBar>
+        </ToolBarTray>
+        <Canvas x:Name="myCanvas" DockPanel.Dock="Top" Height="500" Background="#FFF7F3DE" MouseEnter="myCanvas_MouseEnter" MouseLeftButtonDown="myCanvas_MouseLeftButtonDown" MouseMove="myCanvas_MouseMove" MouseLeftButtonUp="myCanvas_MouseLeftButtonUp"/>
+        <StatusBar Height="40" DockPanel.Dock="Bottom" Background="LightGray">
+            <StatusBarItem>
+                <Label x:Name= "shapeLabel" Content="Ready" Width="100"/>
+            </StatusBarItem>
+            <StatusBarItem>
+                <Label Name="pointLabel" Content="" Width="150"/>
+            </StatusBarItem>
+        </StatusBar>
+    </DockPanel>
 </Window>
