在 MainWindow.xaml 中新增 ListBox 並綁定示例數據
在 `MainWindow.xaml` 中，新增了一個 `ListBox` 控件，並設置其寬度為 100。這個 `ListBox` 使用 `d:ItemsSource` 屬性來綁定示例數據，並設置項目數量為 5。這樣的更改可能是為了在設計時顯示一些示例數據，以便更好地預覽 `ListBox` 的外觀和行為。

--- a/Paint/MainWindow.xaml
+++ b/Paint/MainWindow.xaml
@@ -51,5 +51,6 @@
                 <Label Name="pointLabel" Content="" Width="150"/>
             </StatusBarItem>
         </StatusBar>
+        <ListBox Width="100" d:ItemsSource="{d:SampleData ItemCount=5}"/>
     </DockPanel>
 </Window>
