更新 UI 元素及修正程式碼邏輯
在 `MainWindow.xaml` 中，將選單項目 "開新檔案" 修改為 "新增檔案"。
移除了 `DockPanel` 中的 `ListBox` 控制項。
在 `MainWindow.xaml.cs` 中，於 `myCanvas_MouseLeftButtonUp` 方法中新增了 `strokeColor` 的設定。
在 `MainWindow.xaml.cs` 中，於 `RadioButton_Checked` 方法後新增了一個關閉大括號。

--- a/Paint/MainWindow.xaml
+++ b/Paint/MainWindow.xaml
@@ -10,7 +10,7 @@
     <DockPanel LastChildFill="False">
         <Menu Height="30" DockPanel.Dock="Top">
             <MenuItem Header="檔案" FontSize="14" Height="28" VerticalAlignment="Center">
-                <MenuItem Header="開新檔案" FontSize="14" Height="28" VerticalAlignment="Center"/>
+                <MenuItem Header="新增檔案" FontSize="14" Height="28" VerticalAlignment="Center"/>
                 <MenuItem Header="開啟舊檔" FontSize="14" Height="28" VerticalAlignment="Center"/>
                 <MenuItem Header="儲存檔案" FontSize="14" Height="28" VerticalAlignment="Center"/>
                 <MenuItem Header="另存新檔" FontSize="14" Height="28" VerticalAlignment="Center"/>
@@ -51,6 +51,5 @@
                 <Label Name="pointLabel" Content="" Width="150"/>
             </StatusBarItem>
         </StatusBar>
-        <ListBox Width="100" d:ItemsSource="{d:SampleData ItemCount=5}"/>
     </DockPanel>
 </Window>
