--- a/Paint/MainWindow.xaml
+++ b/Paint/MainWindow.xaml
@@ -20,9 +20,9 @@
         <ToolBarTray Height="40" DockPanel.Dock="Top">
             <ToolBar Height="38" Background="#FFF9D5C0" Margin="0,0,9,0">
                 <Label Content="筆刷色彩" Width="65" VerticalContentAlignment="Center" FontWeight="Bold" FontSize="14"/>
-                <xctk:ColorPicker x:Name="strokeColorPicker" Width="130" DisplayColorAndName="True"/>
+                <xctk:ColorPicker x:Name="strokeColorPicker" Width="130" DisplayColorAndName="True" SelectedColorChanged="strokeColorPicker_SelectedColorChanged"/>
                 <Label Content="填滿色彩" Width="65" VerticalContentAlignment="Center" FontWeight="Bold" FontSize="14"/>
-                <xctk:ColorPicker x:Name="fillColorPicker" Width="130" DisplayColorAndName="True"/>
+                <xctk:ColorPicker x:Name="fillColorPicker" Width="130" DisplayColorAndName="True" SelectedColorChanged="fillColorPicker_SelectedColorChanged"/>
                 <Slider x:Name="strokeThicknessSlider" Width="120" VerticalAlignment="Center" Minimum="1" Maximum="10" Value="1" TickFrequency="1" IsSnapToTickEnabled="True" Margin="20,0,0,0" ValueChanged="strokeThicknessSlider_ValueChanged"/>
                 <Label Width="46" VerticalContentAlignment="Center" FontWeight="Bold" FontSize="14" Margin="10,0,0,0" HorizontalContentAlignment="Center" Content="{Binding Value, ElementName=strokeThicknessSlider}"/>
             </ToolBar>
