--- a/Paint/MainWindow.xaml
+++ b/Paint/MainWindow.xaml
@@ -26,7 +26,7 @@
                 <Slider x:Name="strokeThicknessSlider" Width="120" VerticalAlignment="Center" Minimum="1" Maximum="10" Value="1" TickFrequency="1" IsSnapToTickEnabled="True" Margin="20,0,0,0" ValueChanged="strokeThicknessSlider_ValueChanged"/>
                 <Label Width="46" VerticalContentAlignment="Center" FontWeight="Bold" FontSize="14" Margin="10,0,0,0" HorizontalContentAlignment="Center" Content="{Binding Value, ElementName=strokeThicknessSlider}"/>
             </ToolBar>
-            <ToolBar Width="300" Background="#FFB1D5FD">
+            <ToolBar Width="200" Background="#FFB1D5FD">
                 <RadioButton Width="38" Height="38" Click="ShapeButton_Click" Tag="line" IsChecked="True" >
                     <Image Height="32" Width="32" Source="/line.png"/>
                 </RadioButton>
@@ -41,7 +41,16 @@
                 </RadioButton>
                 <Separator/>
             </ToolBar>
+            <ToolBar Width="100" Background="#FFFDFCB1">
+                <Button x:Name="trashcanButton" Width="38" Height="38" HorizontalAlignment="Left" VerticalAlignment="Top" Click="trashcanButton_Click">
+                    <Image Height="31" Width="31" Source="/trashcan.png"/>
+                </Button>
+                <Button x:Name="eraserButton" Width="38" Height="38" HorizontalAlignment="Left" VerticalAlignment="Top" Click="eraserButton_Click">
+                    <Image Height="31" Width="31" Source="/eraser.png"/>
+                </Button>
+            </ToolBar>
         </ToolBarTray>
+        <Separator Width="1"/>
         <Canvas x:Name="myCanvas" DockPanel.Dock="Top" Height="500" Background="#FFF7F3DE" MouseEnter="myCanvas_MouseEnter" MouseLeftButtonDown="myCanvas_MouseLeftButtonDown" MouseMove="myCanvas_MouseMove" MouseLeftButtonUp="myCanvas_MouseLeftButtonUp"/>
         <StatusBar Height="40" DockPanel.Dock="Bottom" Background="LightGray">
             <StatusBarItem>
