更新 MainWindow 標題及狀態列，優化繪圖事件處理
修改了 MainWindow.xaml 中的標題，從 "2024 WPF Painter Ver1" 改為 "Painter"。
在 StatusBar 中新增了一個 StatusBarItem 和 Label。
新增 MainWindow 建構函式，初始化顏色選擇器。
新增 DisplayStatus 方法，顯示當前繪圖狀態。
修改多個事件處理程序，優化游標設置邏輯。
刪除不再使用的事件處理程序。

--- a/Paint/MainWindow.xaml
+++ b/Paint/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Paint"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="2024 WPF Painter Ver1" Height="650" Width="1000">
+        Title="Painter" Height="650" Width="1000">
     <DockPanel LastChildFill="False">
         <Menu Height="30" DockPanel.Dock="Top">
             <MenuItem Header="檔案" FontSize="14" Height="28" VerticalAlignment="Center">
@@ -57,8 +57,12 @@
                 <Label x:Name= "shapeLabel" Content="Ready" Width="100"/>
             </StatusBarItem>
             <StatusBarItem>
-                <Label Name="pointLabel" Content="" Width="150"/>
+                <Label x:Name="pointLabel" Content="" Width="150"/>
             </StatusBarItem>
+            <StatusBarItem>
+                <Label x:Name="statusLabl" Content="" />
+            </StatusBarItem>
+
         </StatusBar>
     </DockPanel>
 </Window>
