新增導出圖片功能並移除多個選單項目
在 `MainWindow.xaml` 中，移除了新增檔案、開啟舊檔、儲存檔案、另存新檔、結束等多個 `MenuItem` 項目，並新增了一個名為 `SaveCanvasMenuItem` 的 `MenuItem`，其標題為「導出圖片」，並且綁定了 `Click` 事件處理函式 `SaveCanvasMenuItem_Click`。

在 `MainWindow.xaml.cs` 中，新增了 `Microsoft.Win32`、`System.IO` 和 `System.Windows.Media.Imaging` 的引用。

在 `MainWindow.xaml.cs` 的 `namespace Paint` 中，新增了一個名為 `SaveCanvasMenuItem_Click` 的方法。此方法會打開一個 `SaveFileDialog` 讓使用者選擇儲存畫布的檔案位置和格式，並將 `Canvas` 的內容渲染為影像並儲存到選定的檔案中。

--- a/Paint/MainWindow.xaml
+++ b/Paint/MainWindow.xaml
@@ -10,11 +10,7 @@
     <DockPanel LastChildFill="False">
         <Menu Height="30" DockPanel.Dock="Top">
             <MenuItem Header="檔案" FontSize="14" Height="28" VerticalAlignment="Center">
-                <MenuItem Header="新增檔案" FontSize="14" Height="28" VerticalAlignment="Center"/>
-                <MenuItem Header="開啟舊檔" FontSize="14" Height="28" VerticalAlignment="Center"/>
-                <MenuItem Header="儲存檔案" FontSize="14" Height="28" VerticalAlignment="Center"/>
-                <MenuItem Header="另存新檔" FontSize="14" Height="28" VerticalAlignment="Center"/>
-                <MenuItem Header="結束" FontSize="14" Height="28" VerticalAlignment="Center"/>
+                <MenuItem x:Name="SaveCanvasMenuItem" Header="導出圖片" FontSize="14" Height="28" VerticalAlignment="Center" Click="SaveCanvasMenuItem_Click"/>
             </MenuItem>
         </Menu>
         <ToolBarTray Height="40" DockPanel.Dock="Top">
